fix: timer name rescale on mobile

--- a/src/components/TimerSetup.css
+++ b/src/components/TimerSetup.css
@@ -8,7 +8,7 @@
 
 .wrapper {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
 }
 
 .wrapper-inside {
